<resources>
    <string name="app_name">Taomlar</string>
    <string name="taomlar">Taomlar</string>
    <string name="taom_qoshish">Taom qo\'shish</string>
    <string name="barcha_taomlar">Barcha taomlar</string>
    <string name="kerakli_mahsulotlar">Kerakli mahsulotlar</string>
    <string name="taom_tayyorlanish_tartibi">Taom tayyorlanish tartibi</string>
    <string name="taom_qo_shish">Taom qo\'shish</string>
    <string name="taom_nomi">Taom nomi</string>
    <string name="kerakli_maxsulotlar">Kerakli maxsulotlar</string>
    <string name="saqlash">Saqlash</string>
</resources>